test/good/13_1_spectest.fsf
type ntree[T]= Node(e:T,f:forest[T])
and forest[T]= FNil | FCons(n:ntree[T],f:forest[T])

