test/bad/21_9_spectest_bad.fsf
type bad9[T] = Bad9(n:bad9[bad10[T]]) and bad10[T] = Bad10(e:bad9[T])
